--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,13 +13,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20.x'
-    - name: Build & push the Docker image
-      run: |
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
+      - name: Build
+        run: npm ci
+
+      - name: Unit Test
+        run: npm test
+
+      - name: Build & push the Docker image
+        run: |
           docker build . --file Dockerfile --tag ${{ secrets.docker_repository}}:${GITHUB_RUN_NUMBER}
           echo ${{ secrets.docker_secret }} | docker login --username ${{ secrets.docker_username }} --password-stdin
           docker push ${{ secrets.docker_repository}}:${GITHUB_RUN_NUMBER}
