--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+POSTGRES_DB="usr-mngt-db"
+POSTGRES_USER="usr-mngt-user"
+POSTGRES_PASSWORD="usr-mngt-pass"
 
-DATABASE_URL="postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@bmn-usr-mngt-db-service:5432/$POSTGRES_DB?schema=public"
+DATABASE_URL="postgresql://usr-mngt-user:usr-mngt-pass@localhost:5432/usr-mngt-db"
+
+JWT_SECRET="usr-mngt-jwt-secret"
