--- a/infra/deployment.yaml
+++ b/infra/deployment.yaml
@@ -16,22 +16,22 @@ spec:
     spec:
       containers:
         - name: bmn-usr-mngt
-          image: mardinpro/bmn-usr-mngt:6
+          image: mardinpro/bmn-usr-mngt:8
           env:
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
                   name: bmn-usr-mngt-db-secret
-                  value: POSTGRES_DB
+                  key: POSTGRES_DB
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
                   name: bmn-usr-mngt-db-secret
-                  value: POSTGRES_USER
+                  key: POSTGRES_USER
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: bmn-usr-mngt-db-secret
-                  value: POSTGRES_PASSWORD
+                  key: POSTGRES_PASSWORD
           ports:
             - containerPort: 3000
