--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^4.14.1",
     "@types/cookie-session": "^2.0.44",
     "class-validator": "^0.14.0",
     "cookie-session": "^2.0.0",
