feat(auth): signup,signin,signout

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ POSTGRES_PASSWORD="usr-mngt-pass"
 DATABASE_URL="postgresql://usr-mngt-user:usr-mngt-pass@localhost:5432/usr-mngt-db"
 
 JWT_SECRET="usr-mngt-jwt-secret"
+COOKIE_SECRET="usr-mngt-cookie-secret"
