--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.1",
+    "@jest-mock/express": "^2.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -58,6 +59,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "jest-mock-extended": "^2.0.4",
     "prettier": "^2.3.2",
     "prisma": "^4.14.1",
     "source-map-support": "^0.5.20",
