--- a/package.json
+++ b/package.json
@@ -26,18 +26,24 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^4.14.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-session": "^2.0.44",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-session": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "remark": "^14.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.1",
+    "@jest-mock/express": "^2.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
